--- a/config/config.conf
+++ b/config/config.conf
@@ -10,8 +10,8 @@ input_path = /opt/airflow/data/input
 output_path = /opt/airflow/data/output
 
 [api_keys]
-reddit_secret_key = very_secret_api_key
-reddit_client_id = very_secret_client_id
+reddit_secret_key = very_secret_key_here
+reddit_client_id = very_secret_client_id_here
 
 [aws]
 aws_access_key_id = [aws access key id]
