Initial Commit: Reddit_Data_Engineering_Project: AWS connected with Airflow

--- a/config/config.conf
+++ b/config/config.conf
@@ -11,14 +11,14 @@ output_path = /opt/airflow/data/output
 
 [api_keys]
 reddit_secret_key = very_secret_key_here
-reddit_client_id = very_secret_cliend_id_here
+reddit_client_id = very_secret_client_id
 
 [aws]
-aws_access_key_id = [aws access key id]
-aws_secret_access_key= [aws secret key]
+aws_access_key_id = aws_access_key_id
+aws_secret_access_key= aws_secret_access_key
 aws_session_token= [aws session token]
-aws_region = [aws region]
-aws_bucket_name = [s3 bucket name]
+aws_region = aws_region_here
+aws_bucket_name = aws_bucket_name_here
 
 [etl_settings]
 batch_size = 100
