Initial Commit: Reddit_Data_Engineering_Project: AWS connected with Airflow update

--- a/config/config.conf
+++ b/config/config.conf
@@ -17,8 +17,8 @@ reddit_client_id = very_secret_client_id
 aws_access_key_id = aws_access_key_id
 aws_secret_access_key= aws_secret_access_key
 aws_session_token= [aws session token]
-aws_region = aws_region_here
-aws_bucket_name = aws_bucket_name_here
+aws_region = aws_region
+aws_bucket_name = aws_bucket_name
 
 [etl_settings]
 batch_size = 100
