Initial Commit: Reddit_Data_Engineering_Project: Updated

--- a/config/config.conf
+++ b/config/config.conf
@@ -11,14 +11,15 @@ output_path = /opt/airflow/data/output
 
 [api_keys]
 reddit_secret_key = very_secret_key_here
-reddit_client_id = very_secret_client_id
+reddit_client_id = very_secret_client_id_here
 
 [aws]
-aws_access_key_id = aws_access_key_id
+aws_access_key_id = aws_access_key
 aws_secret_access_key= aws_secret_access_key
 aws_session_token= [aws session token]
 aws_region = aws_region
 aws_bucket_name = aws_bucket_name
+
 
 [etl_settings]
 batch_size = 100
